# version

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
data/: config.cfg
src/: app.rs  common.rs  main.rs  static.rs
src/api/: file.rs  mod.rs  status.rs  version.rs  versions.rs
src/api/admin/: edit.rs  home.rs  mod.rs  new_app.rs  new_version.rs  set_file.rs  set_latest.rs
src/sql/: create_apps.sql  create_files.sql  create_versions.sql  execute_new_version.sql  execute_update_version.sql
web/admin/: index.html  index.js
web/serve/: edit.html
web/static/: index.css  index.html
web/static/admin/: index.css  index.html  index.js
