[package]
edition = "2021"
name = "version"
version = "0.1.0"

[dependencies]
afire = {version = "1.2.0", features = ["extensions", "tracing"]}
parking_lot = "0.12.1"
rusqlite = {version = "0.27.0", features = ["bundled", "blob"]}
semver = "1.0.10"
serde_json = "1.0.81"
sha2 = "0.10.2"
simple_config_parser = "1.0.0"
uuid = {version = "1.1.2", features = ["v4"]}
